# covid_tracker

./: Cargo.toml
src/: .main.rs.swp  create.sql  main.rs  proj.db
