[package]
name = "covid_tracker"
version = "0.1.0"
authors = ["Clayton Burrows <burrowsclayton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
tokio = { version = "0.2", features = ["full"] }
select = "0.4.3"
error-chain = "0.12.2"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.19"
csv = "1.1" 
rusqlite = "0.24.0"
